--- a/install
+++ b/install
@@ -118,7 +118,7 @@ class Installer {
     private function populateTitle() {
         $this->titleData = <<<TITLE
 *******************************
-*   Golden Contact Computing  *
+*        Pharaoh Tools        *
 *         $this->programNameFriendly        *
 *******************************
 
@@ -130,7 +130,7 @@ TITLE;
         $this->completionData = <<<COMPLETION
 ... All done!
 *******************************
-Thanks for installing , visit www.gcsoftshop.co.uk for more
+Thanks for installing , visit www.pharaohtools.com for more
 
 COMPLETION;
     }
